--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -77,7 +77,7 @@ To define guix dependencies add a =scheme= source code block. It'll be then tang
 #+begin_src scheme
 "emacs-next"
 "emacs-telega" "emacs-telega-contrib"
-"emacs-vterm"
+"emacs-vterm" "guix-icons"
 
 ; modules dependencies
 "shfmt" "shellcheck" "fd"
@@ -99,7 +99,7 @@ To define guix dependencies add a =scheme= source code block. It'll be then tang
       doom-leader-alt-key "<f13>")
 (doom!
  :completion  corfu vertico ;(ivy +fuzzy +prescient +childframe)
- :ui          nav-flash (modeline +light) ophints (popup +defaults) ligatures treemacs
+ :ui          nav-flash (modeline +light) ophints (popup +defaults) ligatures treemacs doom-dashboard
  :editor      (evil +everywhere) fold lispy snippets (format +onsave) multiple-cursors word-wrap
  :emacs       (dired +dirvish +icons) electric vc ibuffer undo
  :term        eshell vterm
@@ -111,6 +111,13 @@ To define guix dependencies add a =scheme= source code block. It'll be then tang
  :app         calendar telega (rss +org) torrent irc exwm emms dash-menu
  :email       (mu4e +gmail)
  :config      (default +bindings +smartparens +gnupg) literate)
+#+end_src
+** dashboard
+#+begin_src elisp
+(setq fancy-splash-image "~/.guix-home/profile/share/icons/hicolor/scalable/apps/guix-icon.svg")
+(setq +doom-dashboard-functions
+      '(doom-dashboard-widget-banner
+        doom-dashboard-widget-shortmenu))
 #+end_src
 ** modeline
 #+begin_src elisp
