--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -104,7 +104,7 @@ To define guix dependencies add a =scheme= source code block. It'll be then tang
  :editor      (evil +everywhere) fold lispy snippets (format +onsave) multiple-cursors word-wrap
  :emacs       (dired +dirvish +icons) electric vc ibuffer undo
  :term        eshell vterm
- :tools       editorconfig (eval +overlay) (lookup +docsets) magit pdf (pass +auth) make tree-sitter lsp direnv
+ :tools       editorconfig (eval +overlay) (lookup +docsets) magit pdf (pass +auth) make tree-sitter lsp direnv llm
  :checkers    syntax
  :lang        clojure data emacs-lisp
               (org +contacts +dragndrop +pandoc +present +hugo +roam2 +pretty) beancount
@@ -773,7 +773,8 @@ os.execlp('xdg-open', 'xdg-open',
   (appendq!
    +org-babel-mode-alist '((es . elasticsearch))))
 #+end_src
-* vcs
+* programming
+** vcs
 #+begin_src elisp :tangle packages.el
 (package! magit-todos :disable t) ; too slow
 #+end_src
@@ -787,6 +788,14 @@ os.execlp('xdg-open', 'xdg-open',
 (after! browse-at-remote
   (setq browse-at-remote-prefer-symbolic nil))
 #+end_src
+** just
+#+begin_src elisp :tangle packages.el
+(package! just-mode)
+#+end_src
+#+begin_src elisp
+(use-package! just-mode)
+#+end_src
+
 * tramp
 #+begin_src elisp
 (after! tramp
@@ -1594,13 +1603,8 @@ emacsclient -e '(dmenu/select-line-from-file "'$tmp'" :prompt '"$prompt"' :lines
 (use-package! org-node)
 #+end_src
 ** gptel
-#+begin_src elisp :tangle packages.el
-(package! gptel :pin "42fb1bfa72faa79afc608b17a7a32518ed2915e7")
-#+end_src
-
 #+begin_src elisp
-(use-package! gptel
-  :config
+(after! gptel
   (setq gptel-model 'gemini-2.0-flash
         gptel-backend
         (gptel-make-gemini "Gemini"
