--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -594,6 +594,8 @@ dbusserver: true
   (ssh-support? #t)
   (default-cache-ttl 86400)
   (max-cache-ttl 86400)
+  (default-cache-ttl-ssh 86400)
+  (max-cache-ttl-ssh 86400)
   (extra-content "disable-scdaemon")))
 #+end_src
 #+begin_src elisp :tangle packages.el
