--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -1197,7 +1197,7 @@ qutebrowser --nowindow --target tab-bg-silent $@
  (list
   (shepherd-service
    (provision '(goimapnotify))
-   (requirement '(display gpg-agent))
+   (requirement '(x11-display gpg-agent))
    (modules `(((shepherd support) #:hide (mkdir-p)) ;for '%user-log-dir'
               ,@(@ (gnu services shepherd) %default-modules)))
    (auto-start? #f)
