--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -387,6 +387,28 @@ REVERSE? it when true. Returns the selected buffer."
   (advice-add 'app-launcher-parse-files
               :filter-return #'app-launcher-filter)
 
+  (defvar app-launcher--M-x-set '())
+  (defun app-launcher-to-M-x ()
+    (interactive)
+
+    ; forget previously set functions
+    (-each app-launcher--M-x-set #'fmakunbound)
+    (setq app-launcher--M-x-set '())
+
+    ; create new functions
+    (maphash
+     (lambda (name app)
+       (when (cdr (assq 'visible app))
+         (let ((app-symbol (intern (concat "app-" (s-dashed-words name)))))
+           (push app-symbol app-launcher--M-x-set)
+           (fset app-symbol
+                 (lambda ()
+                   (interactive)
+                   (funcall app-launcher-action-function app)))
+           (put app-symbol 'function-documentation (cdr (assq 'comment app))))))
+     (app-launcher-list-apps)))
+
+  (app-launcher-to-M-x)
   (setq app-launcher--action-function #'app-launcher--action-dex))
 #+end_src
 * completion
